fix: non-squared covers should not break the main playlist cover now

--- a/src/stylesheets/components/TopItem.sass
+++ b/src/stylesheets/components/TopItem.sass
@@ -7,8 +7,8 @@
   position: absolute
 
 .playlist_img_list
-  width: 50%
-  height: 50%
+  width: 18.5vh
+  height: 18.5vh
 
 .playlist_img_solo
   height: 100%
@@ -47,7 +47,7 @@
   h3, h4, h5, .listmera_playlist
     margin: .5px 10px
     color: $font-color
-    font-weight: $regular
+    font-weight: $light
     font-size: .9em
     line-height: 1.1
   h3, .listmera_playlist
